@@ -13,6 +13,7 @@ import io.harness.ChangeHandler;
 import io.harness.annotations.dev.HarnessTeam;
 import io.harness.annotations.dev.OwnedBy;
 import io.harness.changestreamsframework.ChangeEvent;
+import io.harness.data.structure.EmptyPredicate;
 import io.harness.pms.plan.execution.beans.PipelineExecutionSummaryEntity;
 import io.harness.timescaledb.TimeScaleDBService;
 
@@ -31,32 +32,36 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import lombok.extern.slf4j.Slf4j;
+import org.bson.BasicBSONObject;
+import org.bson.types.BasicBSONList;
 
 @OwnedBy(HarnessTeam.CDC)
 @Slf4j
 public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implements ChangeHandler {
   private static final int MAX_RETRY_COUNT = 5;
-  @Inject private TimeScaleDBService timeScaleDBService;
-  private static String SERVICE_STARTTS = "service_startts";
-  private static String SERVICE_ENDTS = "service_endts";
+
   // These set of keys we can use to populate data to 'artifact_image' in service_infra_info
-  private static List<String> artifactPathNameSet = Arrays.asList("imagePath", "artifactPath", "bucketName", "jobName");
+  private static final List<String> artifactPathNameSet = List.of("imagePath", "artifactPath", "bucketName", "jobName");
   // These set of keys we can use to populate data to 'tag' in service_infra_info.
   // Passing artifactPath as both tag and artifact_image in case of ArtifactoryGenericArtifactSummary. Have put in end
   // to avoid conflict for other ArtifactSummary
-  private static List<String> tagNameSet = Arrays.asList("tag", "version", "build", "artifactPath");
+  private static final List<String> tagNameSet = Arrays.asList("tag", "version", "build", "artifactPath");
+  static final String ENV_GROUP_IDENTIFIER = "envGroupIdentifier";
+
+  @Inject private TimeScaleDBService timeScaleDBService;
 
   @Override
   public boolean handleChange(ChangeEvent<?> changeEvent, String tableName, String[] fields) {
     log.trace("In TimeScale Change Handler: {}, {}, {}", changeEvent, tableName, fields);
-    List<Map<String, String>> columnValueMapping = null;
+    List<Map<String, String>> columnValueMapping;
     try {
-      columnValueMapping = getColumnValueMapping(changeEvent, fields);
+      columnValueMapping = getColumnValueMapping(changeEvent);
       switch (changeEvent.getChangeType()) {
         case INSERT:
           if (columnValueMapping != null && columnValueMapping.size() > 0) {
             columnValueMapping.forEach(column -> {
-              if (column.containsKey(SERVICE_STARTTS) && !column.get(SERVICE_STARTTS).equals("")) {
+              if (column.containsKey(PlanExecutionSummaryCDConstants.SERVICE_START_TS)
+                  && !column.get(PlanExecutionSummaryCDConstants.SERVICE_START_TS).equals("")) {
                 dbOperation(insertSQL(tableName, column));
               }
             });
@@ -65,7 +70,8 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
         case UPDATE:
           if (columnValueMapping != null && columnValueMapping.size() > 0) {
             columnValueMapping.forEach(column -> {
-              if (column.containsKey(SERVICE_STARTTS) && !column.get(SERVICE_STARTTS).equals("")) {
+              if (column.containsKey(PlanExecutionSummaryCDConstants.SERVICE_START_TS)
+                  && !column.get(PlanExecutionSummaryCDConstants.SERVICE_START_TS).equals("")) {
                 dbOperation(updateSQL(tableName, column, Collections.singletonMap("id", changeEvent.getUuid())));
               }
             });
@@ -80,7 +86,7 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
     return true;
   }
 
-  public List<Map<String, String>> getColumnValueMapping(ChangeEvent<?> changeEvent, String[] fields) {
+  public List<Map<String, String>> getColumnValueMapping(ChangeEvent<?> changeEvent) {
     if (changeEvent == null) {
       return null;
     }
@@ -94,13 +100,13 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
       return nodeMap;
     }
 
-    if (dbObject.get("accountId") != null) {
+    if (dbObject.get(PlanExecutionSummaryCDConstants.ACCOUNT_ID_KEY) != null) {
       accountId = dbObject.get(PipelineExecutionSummaryEntity.PlanExecutionSummaryKeys.accountId).toString();
     }
-    if (dbObject.get("orgIdentifier") != null) {
+    if (dbObject.get(PlanExecutionSummaryCDConstants.ORG_IDENTIFIER_KEY) != null) {
       orgIdentifier = dbObject.get(PipelineExecutionSummaryEntity.PlanExecutionSummaryKeys.orgIdentifier).toString();
     }
-    if (dbObject.get("projectIdentifier") != null) {
+    if (dbObject.get(PlanExecutionSummaryCDConstants.PROJECT_IDENTIFIER_KEY) != null) {
       projectIdentifier =
           dbObject.get(PipelineExecutionSummaryEntity.PlanExecutionSummaryKeys.projectIdentifier).toString();
     }
@@ -118,57 +124,52 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
         ((BasicDBObject) dbObject.get(PipelineExecutionSummaryEntity.PlanExecutionSummaryKeys.layoutNodeMap))
             .entrySet();
 
-    Iterator<Map.Entry<String, Object>> iterator = layoutNodeMap.iterator();
-    while (iterator.hasNext()) {
+    for (Map.Entry<String, Object> stageExecutionNode : layoutNodeMap) {
+      // columnValueMappingList: for the case when single stageExecution contains multiple environments ( gitops )
+      final List<Map<String, String>> columnValueMappingList = new ArrayList<>();
       Map<String, String> columnValueMapping = new HashMap<>();
-      Map.Entry<String, Object> iteratorObject = iterator.next();
-      String id = iteratorObject.getKey();
+      String id = stageExecutionNode.getKey();
       columnValueMapping.put("pipeline_execution_summary_cd_id", changeEvent.getUuid());
       columnValueMapping.put("id", id);
       columnValueMapping.put("service_status", "");
 
       // stage - status
-      if (((BasicDBObject) iteratorObject.getValue()).get("status") != null) {
-        String service_status = ((BasicDBObject) iteratorObject.getValue()).get("status").toString();
+      if (((BasicDBObject) stageExecutionNode.getValue()).get("status") != null) {
+        String service_status = ((BasicDBObject) stageExecutionNode.getValue()).get("status").toString();
         if (service_status != null) {
           columnValueMapping.put("service_status", service_status);
         }
       }
 
-      // service_startts
-      if (((BasicDBObject) iteratorObject.getValue()).get("startTs") != null) {
-        String service_startts =
-            String.valueOf(Long.parseLong(((BasicDBObject) iteratorObject.getValue()).get("startTs").toString()));
-        if (service_startts != null) {
-          columnValueMapping.put("service_startts", service_startts);
-        }
+      if (((BasicDBObject) stageExecutionNode.getValue()).get("startTs") != null) {
+        String service_start_ts =
+            String.valueOf(Long.parseLong(((BasicDBObject) stageExecutionNode.getValue()).get("startTs").toString()));
+        columnValueMapping.put(PlanExecutionSummaryCDConstants.SERVICE_START_TS, service_start_ts);
       } else {
-        columnValueMapping.put("service_startts", "");
+        columnValueMapping.put(PlanExecutionSummaryCDConstants.SERVICE_START_TS, "");
       }
 
       // service_endts
-      if (((BasicDBObject) iteratorObject.getValue()).get("endTs") != null) {
-        String service_endts =
-            String.valueOf(Long.parseLong(((BasicDBObject) iteratorObject.getValue()).get("endTs").toString()));
-        if (service_endts != null) {
-          columnValueMapping.put("service_endts", service_endts);
-        }
+      if (((BasicDBObject) stageExecutionNode.getValue()).get("endTs") != null) {
+        String service_end_ts =
+            String.valueOf(Long.parseLong(((BasicDBObject) stageExecutionNode.getValue()).get("endTs").toString()));
+        columnValueMapping.put(PlanExecutionSummaryCDConstants.SERVICE_END_TS, service_end_ts);
       } else {
-        columnValueMapping.put("service_endts", "");
+        columnValueMapping.put(PlanExecutionSummaryCDConstants.SERVICE_END_TS, "");
       }
 
       columnValueMapping.put("service_name", "");
       columnValueMapping.put("service_id", "");
-      columnValueMapping.put("accountId", "");
-      columnValueMapping.put("orgIdentifier", "");
-      columnValueMapping.put("projectIdentifier", "");
+      columnValueMapping.put(PlanExecutionSummaryCDConstants.ACCOUNT_ID_KEY, "");
+      columnValueMapping.put(PlanExecutionSummaryCDConstants.ORG_IDENTIFIER_KEY, "");
+      columnValueMapping.put(PlanExecutionSummaryCDConstants.PROJECT_IDENTIFIER_KEY, "");
       columnValueMapping.put("deployment_type", "");
       columnValueMapping.put("env_name", "");
       columnValueMapping.put("env_id", "");
       columnValueMapping.put("env_type", "");
       columnValueMapping.put("rollback_duration", "");
 
-      DBObject moduleInfoObject = (DBObject) ((DBObject) iteratorObject.getValue()).get("moduleInfo");
+      DBObject moduleInfoObject = (DBObject) ((DBObject) stageExecutionNode.getValue()).get("moduleInfo");
       if (moduleInfoObject != null) {
         DBObject cdObject = (DBObject) moduleInfoObject.get("cd");
         if (cdObject != null) {
@@ -180,22 +181,23 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
             columnValueMapping.put("service_name", serviceName);
 
             // service_id
-            String serviceId = serviceInfoObject.get("identifier").toString();
+            String serviceId = serviceInfoObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY).toString();
             columnValueMapping.put("service_id", serviceId);
 
             // accountId
-            columnValueMapping.put("accountId", accountId);
+            columnValueMapping.put(PlanExecutionSummaryCDConstants.ACCOUNT_ID_KEY, accountId);
 
             // orgIdentifier
-            columnValueMapping.put("orgIdentifier", orgIdentifier);
+            columnValueMapping.put(PlanExecutionSummaryCDConstants.ORG_IDENTIFIER_KEY, orgIdentifier);
 
             // projectIdentifier
-            columnValueMapping.put("projectIdentifier", projectIdentifier);
+            columnValueMapping.put(PlanExecutionSummaryCDConstants.PROJECT_IDENTIFIER_KEY, projectIdentifier);
 
             // gitOpsEnabled
-            if (serviceInfoObject.get("gitOpsEnabled") != null) {
-              String gitOpsEnabled = serviceInfoObject.get("gitOpsEnabled").toString();
-              columnValueMapping.put("gitOpsEnabled", gitOpsEnabled);
+            if (serviceInfoObject.get(PlanExecutionSummaryCDConstants.GITOPS_ENABLED_KEY) != null) {
+              String gitOpsEnabled =
+                  serviceInfoObject.get(PlanExecutionSummaryCDConstants.GITOPS_ENABLED_KEY).toString();
+              columnValueMapping.put(PlanExecutionSummaryCDConstants.GITOPS_ENABLED_KEY, gitOpsEnabled);
             }
 
             // deploymentType
@@ -228,39 +230,13 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
               }
             }
 
-            // env info
-            if (cdObject.get("infraExecutionSummary") != null) {
-              DBObject infraExecutionSummaryObject = (DBObject) cdObject.get("infraExecutionSummary");
-              if (infraExecutionSummaryObject.get("name") != null) {
-                String envName = infraExecutionSummaryObject.get("name").toString();
-                columnValueMapping.put("env_name", envName);
-              }
-
-              if (infraExecutionSummaryObject.get("identifier") != null
-                  && infraExecutionSummaryObject.get("identifier").toString().length() != 0) {
-                String envIdentifier = infraExecutionSummaryObject.get("identifier").toString();
-                columnValueMapping.put("env_id", envIdentifier);
-              }
-
-              if (infraExecutionSummaryObject.get("infrastructureIdentifier") != null
-                  && infraExecutionSummaryObject.get("infrastructureIdentifier").toString().length() != 0) {
-                String infrastructureIdentifier =
-                    infraExecutionSummaryObject.get("infrastructureIdentifier").toString();
-                columnValueMapping.put("infrastructureIdentifier", infrastructureIdentifier);
-              }
-
-              if (infraExecutionSummaryObject.get("infrastructureName") != null
-                  && infraExecutionSummaryObject.get("infrastructureName").toString().length() != 0) {
-                String infrastructureName = infraExecutionSummaryObject.get("infrastructureName").toString();
-                columnValueMapping.put("infrastructureName", infrastructureName);
-              }
-
-              if (infraExecutionSummaryObject.get("type") != null
-                  && infraExecutionSummaryObject.get("type").toString().length() != 0) {
-                String envType = infraExecutionSummaryObject.get("type").toString();
-                columnValueMapping.put("env_type", envType);
-              }
-            }
+            // infraExecutionSummary
+            columnValueMapping.putAll(generateColumnValueMappingFromInfraExecSummary(cdObject));
+            generateEnvMappingFromGitOpsExecSummary(cdObject).forEach(incomingMapping -> {
+              Map<String, String> copyOfMapping = new HashMap<>(columnValueMapping);
+              copyOfMapping.putAll(incomingMapping);
+              columnValueMappingList.add(copyOfMapping);
+            });
           }
 
           // rollback_duration
@@ -270,13 +246,17 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
           }
         }
       }
-      nodeMap.add(columnValueMapping);
+      if (EmptyPredicate.isNotEmpty(columnValueMappingList)) {
+        nodeMap.addAll(columnValueMappingList);
+      } else {
+        nodeMap.add(columnValueMapping);
+      }
     }
 
     return nodeMap;
   }
 
-  public boolean dbOperation(String query) {
+  private boolean dbOperation(String query) {
     boolean successfulOperation = false;
     log.trace("In dbOperation, Query: {}", query);
     if (timeScaleDBService.isValid()) {
@@ -297,12 +277,10 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
     return successfulOperation;
   }
 
-  public static String insertSQL(String tableName, Map<String, String> columnValueMappingForInsert) {
+  private static String insertSQL(String tableName, Map<String, String> columnValueMappingForInsert) {
     StringBuilder insertSQLBuilder = new StringBuilder();
 
-    /**
-     * Removing column that holds NULL value or Blank value...
-     */
+    // Removing column that holds NULL value or Blank value...
     if (!columnValueMappingForInsert.isEmpty()) {
       Set<Map.Entry<String, String>> setOfEntries = columnValueMappingForInsert.entrySet();
       Iterator<Map.Entry<String, String>> iterator = setOfEntries.iterator();
@@ -340,7 +318,7 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
     return insertSQLBuilder.toString();
   }
 
-  public static String updateSQL(String tableName, Map<String, String> columnValueMappingForSet,
+  private static String updateSQL(String tableName, Map<String, String> columnValueMappingForSet,
       Map<String, String> columnValueMappingForCondition) {
     StringBuilder updateQueryBuilder = new StringBuilder(2048);
 
@@ -350,8 +328,9 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
     if (insertSQL(tableName, columnValueMappingForSet) != null) {
       updateQueryBuilder.append(insertSQL(tableName, columnValueMappingForSet));
     }
-    // On conflict condition
-    updateQueryBuilder.append(" ON CONFLICT (id,service_startts) Do ");
+
+    // On conflict condition and Making the UPDATE Query
+    updateQueryBuilder.append(" ON CONFLICT (id,service_startts) Do UPDATE  SET ");
 
     if (!columnValueMappingForSet.isEmpty()) {
       Set<Map.Entry<String, String>> setOfEntries = columnValueMappingForSet.entrySet();
@@ -382,9 +361,6 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
       }
     }
 
-    /* Making the UPDATE Query */
-    updateQueryBuilder.append(String.format("UPDATE  SET "));
-
     if (!columnValueMappingForSet.isEmpty()) {
       for (Map.Entry<String, String> entry : columnValueMappingForSet.entrySet()) {
         updateQueryBuilder.append(
@@ -396,5 +372,107 @@ public class PlanExecutionSummaryCdChangeServiceInfraChangeDataHandlerNew implem
 
     // Returning the generated UPDATE SQL Query as a String...
     return updateQueryBuilder.toString();
+  }
+
+  private Map<String, String> generateColumnValueMappingFromInfraExecSummary(DBObject cdObject) {
+    Map<String, String> columnValueMapping = new HashMap<>();
+    if (cdObject.get("infraExecutionSummary") != null) {
+      DBObject infraExecutionSummaryObject = (DBObject) cdObject.get("infraExecutionSummary");
+      if (infraExecutionSummaryObject.get("name") != null) {
+        String envName = infraExecutionSummaryObject.get("name").toString();
+        columnValueMapping.put("env_name", envName);
+      }
+
+      if (infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY) != null
+          && infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY).toString().length() != 0) {
+        String envIdentifier =
+            infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY).toString();
+        columnValueMapping.put("env_id", envIdentifier);
+      }
+
+      if (infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_IDENTIFIER_KEY) != null
+          && infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_IDENTIFIER_KEY)
+                  .toString()
+                  .length()
+              != 0) {
+        String infrastructureIdentifier =
+            infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_IDENTIFIER_KEY).toString();
+        columnValueMapping.put(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_IDENTIFIER_KEY, infrastructureIdentifier);
+      }
+
+      if (infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_NAME_KEY) != null
+          && infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_NAME_KEY)
+                  .toString()
+                  .length()
+              != 0) {
+        String infrastructureName =
+            infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_NAME_KEY).toString();
+        columnValueMapping.put(PlanExecutionSummaryCDConstants.INFRASTRUCTURE_NAME_KEY, infrastructureName);
+      }
+
+      if (infraExecutionSummaryObject.get("type") != null
+          && infraExecutionSummaryObject.get("type").toString().length() != 0) {
+        String envType = infraExecutionSummaryObject.get("type").toString();
+        columnValueMapping.put("env_type", envType);
+      }
+
+      if (infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_ID) != null
+          && infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_ID).toString().length() > 0) {
+        String envGroupId = infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_ID).toString();
+        columnValueMapping.put("env_group_ref", envGroupId);
+      }
+
+      if (infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_NAME) != null
+          && infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_NAME).toString().length() > 0) {
+        String envGroupName =
+            infraExecutionSummaryObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_NAME).toString();
+        columnValueMapping.put("env_group_name", envGroupName);
+      }
+    }
+    return columnValueMapping;
+  }
+
+  private List<Map<String, String>> generateEnvMappingFromGitOpsExecSummary(DBObject cdObject) {
+    final List<Map<String, String>> result = new ArrayList<>();
+    if (cdObject.containsField("gitopsExecutionSummary")) {
+      BasicBSONObject gitopsExecutionSummary = (BasicBSONObject) cdObject.get("gitopsExecutionSummary");
+      if (gitopsExecutionSummary.containsField("environments")) {
+        BasicBSONList environments = (BasicBSONList) gitopsExecutionSummary.get("environments");
+        for (Object environment : environments) {
+          Map<String, String> columnMappingForSingleEnv = new HashMap<>();
+          if (environment instanceof BasicBSONObject) {
+            BasicBSONObject environmentObject = (BasicBSONObject) environment;
+            if (environmentObject.get("name") != null) {
+              String envName = environmentObject.get("name").toString();
+              columnMappingForSingleEnv.put("env_name", envName);
+            }
+            if (environmentObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY) != null
+                && environmentObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY).toString().length() != 0) {
+              String envIdentifier = environmentObject.get(PlanExecutionSummaryCDConstants.IDENTIFIER_KEY).toString();
+              columnMappingForSingleEnv.put("env_id", envIdentifier);
+            }
+
+            if (environmentObject.get("type") != null && environmentObject.get("type").toString().length() != 0) {
+              String envType = environmentObject.get("type").toString();
+              columnMappingForSingleEnv.put("env_type", envType);
+            }
+
+            if (environmentObject.get(ENV_GROUP_IDENTIFIER) != null
+                && environmentObject.get(ENV_GROUP_IDENTIFIER).toString().length() > 0) {
+              String envGroupId = environmentObject.get(ENV_GROUP_IDENTIFIER).toString();
+              columnMappingForSingleEnv.put("env_group_ref", envGroupId);
+            }
+
+            if (environmentObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_NAME) != null
+                && environmentObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_NAME).toString().length() > 0) {
+              String envGroupName = environmentObject.get(PlanExecutionSummaryCDConstants.ENV_GROUP_NAME).toString();
+              columnMappingForSingleEnv.put("env_group_name", envGroupName);
+            }
+          }
+          result.add(columnMappingForSingleEnv);
+        }
+      }
+    }
+    return result;
   }
 }
